# seqseq

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/tclap/: CMakeLists.txt
src/: CMakeLists.txt  element.cpp  element.h  engine.cpp  engine.h  main.cpp  parser.cpp  parser.h  seqseq.h  standard.cpp  standard.h  state.cpp  state.h
